--- a/car-app/src/app/components/make-trip/make-trip.component.css
+++ b/car-app/src/app/components/make-trip/make-trip.component.css
@@ -3,3 +3,20 @@
 	margin: auto;
 	margin-bottom: 20px;
 }
+
+.fieldBody {
+	display: flex;
+	flex-direction: column;
+	margin-bottom: 10px;
+}
+
+.fieldElem {
+	display: flex;
+	flex-direction: row;
+	width: 100%;
+	margin: auto;
+}
+
+.form-group {
+	margin: 2px;
+}
