--- a/car-app/src/app/components/message/message.component.html
+++ b/car-app/src/app/components/message/message.component.html
@@ -1,13 +1,19 @@
-<div class="messageContainer">
-  <div class="messageData">
-    <span class="sender">
-      {{userName}}
+
+<div class="messageContainer"
+[ngClass]="{'isOwnMessageContainer':isOwnMessage}">
+<div class="messageData"
+    [ngClass]="{'isOwnMessageData':isOwnMessage}">
+    <span class="sender"
+        [ngClass]="{'isOwnSender':isOwnMessage}">
+        {{ userName }}
     </span>
-    <span class="timeStamp">
-      {{timeStamp | date: 'medium'}}
+    <span class="timestamp" 
+        [ngClass] = "{'isOwnTimestamp':isOwnMessage}">
+        {{ timeStamp | date:'medium' }}
     </span>
-  </div>
-  <div class="messageContent">
-    {{messageContent}}
-  </div>
+</div>
+<div class="messageContent"
+    [ngClass]="{'isOwnMessageContent':isOwnMessage}">
+    {{ messageContent }}
+</div>
 </div>
