--- a/car-app/src/app/components/user-list/user-list.component.html
+++ b/car-app/src/app/components/user-list/user-list.component.html
@@ -1,3 +1,4 @@
-<p>
-  user-list works!
-</p>
+<h3>Users</h3>
+<div *ngFor="let user of users | async">
+  <app-user-item [user]=user></app-user-item>
+</div>
